# ai-agent-core

./: DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  uv.lock.old  zededa.py
zededa_server_app/: adk_orchestrator.py  agent.py  main.py  supervisor_prompt.py
